--- a/bot.yml
+++ b/bot.yml
@@ -18,7 +18,7 @@ config:
     default: the default value
     global: true
   - name: PORT
-    friendly_name: Page Access Token
+    friendly_name: Port
     info: This is the value that will get passed to your Bot as PORT
     default: the default value
     global: true
